--- a/app/src/main/res/layout/halaman_kedua.xml
+++ b/app/src/main/res/layout/halaman_kedua.xml
@@ -5,33 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Iphone 13"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.147"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.223" />
+
+    <include
+        layout="@layout/toolbar_default"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp"
+        tools:layout_editor_absoluteY="69dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textView18"
+        android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="pengiriman :"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="188dp" />
+        android:text="tesss"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.145"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.292" />
 
     <Button
         android:id="@+id/button2"
@@ -42,7 +40,7 @@
         android:text="Pengiriman"
         app:iconPadding="4dp"
         tools:layout_editor_absoluteX="265dp"
-        tools:layout_editor_absoluteY="228dp" />
+        tools:layout_editor_absoluteY="281dp" />
 
     <CheckBox
         android:id="@+id/checkBox"
@@ -50,7 +48,7 @@
         android:layout_height="wrap_content"
         android:text="JNE"
         tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="213dp" />
+        tools:layout_editor_absoluteY="266dp" />
 
     <CheckBox
         android:id="@+id/checkBox2"
@@ -58,14 +56,22 @@
         android:layout_height="wrap_content"
         android:text="JNT"
         tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="213dp" />
+        tools:layout_editor_absoluteY="266dp" />
 
     <CheckBox
         android:id="@+id/checkBox3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="PickUp Store"
-        tools:layout_editor_absoluteX="51dp"
-        tools:layout_editor_absoluteY="271dp" />
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="314dp" />
+
+    <TextView
+        android:id="@+id/textView18"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="pengiriman :"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="241dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
